Simplify flatten sales df to use pandas unpivot

--- a/m5/m5-acc-lightgbm.ipynb
+++ b/m5/m5-acc-lightgbm.ipynb
@@ -42,36 +42,64 @@
             "metadata": {
                 "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
                 "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
+                "execution": {
+                    "iopub.status.busy": "2024-09-07T17:22:20.486228Z",
+                    "iopub.execute_input": "2024-09-07T17:22:20.486748Z",
+                    "iopub.status.idle": "2024-09-07T17:22:25.647248Z",
+                    "shell.execute_reply.started": "2024-09-07T17:22:20.486709Z",
+                    "shell.execute_reply": "2024-09-07T17:22:25.646009Z"
+                },
                 "trusted": true
             },
-            "execution_count": null,
+            "execution_count": 1,
             "outputs": []
         },
         {
             "cell_type": "code",
-            "source": "SUBMISSION_RUN = True",
+            "source": "SUBMISSION_RUN = False",
             "metadata": {
+                "execution": {
+                    "iopub.status.busy": "2024-09-07T17:22:26.375416Z",
+                    "iopub.execute_input": "2024-09-07T17:22:26.381040Z",
+                    "iopub.status.idle": "2024-09-07T17:22:26.390856Z",
+                    "shell.execute_reply.started": "2024-09-07T17:22:26.380970Z",
+                    "shell.execute_reply": "2024-09-07T17:22:26.389250Z"
+                },
                 "trusted": true
             },
-            "execution_count": null,
+            "execution_count": 2,
             "outputs": []
         },
         {
             "cell_type": "code",
-            "source": "INPUT_BASE_PATH = \"/kaggle/input/m5-forecasting-accuracy\"\nOUTPUT_BASE_BATH = \"/kaggle/working\"\n\nCALENDAR_DATA = pd.read_csv(f\"{INPUT_BASE_PATH}/calendar.csv\")\nSELL_PRICES = pd.read_csv(f\"{INPUT_BASE_PATH}/sell_prices.csv\")\nSALES_TRAIN_EVALUATION = pd.read_csv(f\"{INPUT_BASE_PATH}/sales_train_evaluation.csv\")\n# SALES_TRAIN_VALIDATION = pd.read_csv(f\"{INPUT_BASE_PATH}/sales_train_validation.csv\")\n\nSAMPLE_SUBMISSION = pd.read_csv(f\"{INPUT_BASE_PATH}/sample_submission.csv\")\nSUBMISSION_INDEX = SAMPLE_SUBMISSION.set_index(\"id\").index\nVAL_SUBMISSION = SAMPLE_SUBMISSION[SAMPLE_SUBMISSION[\"id\"].str.contains(\"validation\")]\nEVAL_SUBMISSION = SAMPLE_SUBMISSION[SAMPLE_SUBMISSION[\"id\"].str.contains(\"evaluation\")]",
+            "source": "INPUT_BASE_PATH = \"/kaggle/input/m5-forecasting-accuracy\"\nOUTPUT_BASE_BATH = \"/kaggle/working\"\n\nCALENDAR_DATA = pd.read_csv(f\"{INPUT_BASE_PATH}/calendar.csv\")\nSELL_PRICES = pd.read_csv(f\"{INPUT_BASE_PATH}/sell_prices.csv\")\nSALES_TRAIN_EVALUATION = pd.read_csv(f\"{INPUT_BASE_PATH}/sales_train_evaluation.csv\")\n\nSAMPLE_SUBMISSION = pd.read_csv(f\"{INPUT_BASE_PATH}/sample_submission.csv\")\nSUBMISSION_INDEX = SAMPLE_SUBMISSION.set_index(\"id\").index\nVAL_SUBMISSION = SAMPLE_SUBMISSION[SAMPLE_SUBMISSION[\"id\"].str.contains(\"validation\")]\nEVAL_SUBMISSION = SAMPLE_SUBMISSION[SAMPLE_SUBMISSION[\"id\"].str.contains(\"evaluation\")]",
             "metadata": {
+                "execution": {
+                    "iopub.status.busy": "2024-09-07T17:22:26.844824Z",
+                    "iopub.execute_input": "2024-09-07T17:22:26.846349Z",
+                    "iopub.status.idle": "2024-09-07T17:22:41.875306Z",
+                    "shell.execute_reply.started": "2024-09-07T17:22:26.846284Z",
+                    "shell.execute_reply": "2024-09-07T17:22:41.873933Z"
+                },
                 "trusted": true
             },
-            "execution_count": null,
+            "execution_count": 3,
             "outputs": []
         },
         {
             "cell_type": "code",
             "source": "# Constants\nMAX_TIMESTAMP = 1941",
             "metadata": {
+                "execution": {
+                    "iopub.status.busy": "2024-09-07T17:22:41.877458Z",
+                    "iopub.execute_input": "2024-09-07T17:22:41.877880Z",
+                    "iopub.status.idle": "2024-09-07T17:22:41.883466Z",
+                    "shell.execute_reply.started": "2024-09-07T17:22:41.877845Z",
+                    "shell.execute_reply": "2024-09-07T17:22:41.882202Z"
+                },
                 "trusted": true
             },
-            "execution_count": null,
+            "execution_count": 4,
             "outputs": []
         },
         {
@@ -83,45 +111,80 @@
             "cell_type": "code",
             "source": "# Extract categorical mappings\ndef get_unique_value_id_map(df: pd.DataFrame, col_name: str):\n    return {value_id: i for (i, value_id) in enumerate(df[col_name].unique())}\n\n\ndef map_category_ids(sales_df: pd.DataFrame, column_name: str, submission_run: bool):\n    category_id_map = get_unique_value_id_map(sales_df, column_name)\n    id_category_map = {v: k for (k, v) in category_id_map.items()}\n    sales_df[column_name] = sales_df[column_name].map(category_id_map)\n    return (category_id_map, None) if submission_run else (category_id_map, id_category_map)",
             "metadata": {
+                "execution": {
+                    "iopub.status.busy": "2024-09-07T17:22:41.885104Z",
+                    "iopub.execute_input": "2024-09-07T17:22:41.885536Z",
+                    "iopub.status.idle": "2024-09-07T17:22:41.899982Z",
+                    "shell.execute_reply.started": "2024-09-07T17:22:41.885485Z",
+                    "shell.execute_reply": "2024-09-07T17:22:41.898723Z"
+                },
                 "trusted": true
             },
-            "execution_count": null,
+            "execution_count": 5,
             "outputs": []
         },
         {
             "cell_type": "code",
-            "source": "# Process sales data\ndef flatten_sales_df(sales_df: pd.DataFrame, timestamp_cols: list[str]) -> pd.DataFrame:\n    sales_dfs = []\n    grouper = sales_df.groupby(\n        [\n            \"item_id\",\n            \"dept_id\",\n            \"cat_id\",\n            \"store_id\",\n            \"state_id\"\n        ]\n    )\n    for key, sales_df in tqdm(grouper):\n        (item, dept, cat, store, state) = key\n        sales_df = sales_df[timestamp_cols].T.reset_index()\n        sales_df.columns = [\"d\", \"count\"]\n        sales_df = sales_df.assign(\n            d = sales_df[\"d\"].apply(lambda d: int(d.lstrip(\"d_\"))),\n            item_id = item,\n            dept_id = dept,\n            cat_id = cat,\n            store_id = store,\n            state_id = state,\n        )\n        sales_dfs.append(sales_df)\n    return pd.concat(sales_dfs)",
+            "source": "# Process sales data\ndef unpivot_sales_df(sales_df: pd.DataFrame, timestamp_cols: list[str]) -> pd.DataFrame:\n    sales_df = sales_df.melt(\n        id_vars=[\"item_id\", \"dept_id\", \"cat_id\", \"store_id\", \"state_id\"],\n        value_vars=timestamp_cols,\n        var_name=\"d\",\n        value_name=\"count\"\n    )\n    sales_df[\"d\"] = sales_df[\"d\"].apply(lambda d: int(d.lstrip(\"d_\")))\n    return sales_df\n    ",
             "metadata": {
+                "execution": {
+                    "iopub.status.busy": "2024-09-07T17:22:41.903556Z",
+                    "iopub.execute_input": "2024-09-07T17:22:41.904332Z",
+                    "iopub.status.idle": "2024-09-07T17:22:41.916913Z",
+                    "shell.execute_reply.started": "2024-09-07T17:22:41.904258Z",
+                    "shell.execute_reply": "2024-09-07T17:22:41.915544Z"
+                },
                 "trusted": true
             },
-            "execution_count": null,
+            "execution_count": 6,
             "outputs": []
         },
         {
             "cell_type": "code",
             "source": "# Process calendar data\ndef select_format_calendar_features(calendar_data: pd.DataFrame) -> pd.DataFrame:\n    # Drop columns\n    cols_to_drop = [\"weekday\", \"event_name_2\", \"event_type_2\"]\n    calendar_data = calendar_data.copy().drop(columns=cols_to_drop)\n    \n    # Format cols\n    calendar_data[\"d\"] = calendar_data[\"d\"].apply(lambda d: int(d.lstrip(\"d_\")))\n    calendar_data = calendar_data.rename(columns={\n        \"event_name_1\": \"event_name\",\n        \"event_type_1\": \"event_type\",\n        \"wday\": \"weekday\"\n    })\n    \n    return calendar_data",
             "metadata": {
+                "execution": {
+                    "iopub.status.busy": "2024-09-07T17:22:41.918548Z",
+                    "iopub.execute_input": "2024-09-07T17:22:41.918938Z",
+                    "iopub.status.idle": "2024-09-07T17:22:41.929673Z",
+                    "shell.execute_reply.started": "2024-09-07T17:22:41.918906Z",
+                    "shell.execute_reply": "2024-09-07T17:22:41.928155Z"
+                },
                 "trusted": true
             },
-            "execution_count": null,
+            "execution_count": 7,
             "outputs": []
         },
         {
             "cell_type": "code",
             "source": "# Process sell price data\ndef extract_state_and_dept_id(sell_prices: pd.DataFrame) -> pd.DataFrame:\n    return (\n        sell_prices\n        .assign(state_id=sell_prices[\"store_id\"].str.extract(r\"(^[A-Z]+)\"))\n        .assign(dept_id=sell_prices[\"item_id\"].str.extract(r\"(^[A-Z]+_[0-9]+)\"))\n    )\n\n\ndef get_item_state_level_sell_prices(sell_prices: pd.DataFrame) -> pd.DataFrame:\n    return (\n        sell_prices\n        .groupby([\"item_id\", \"state_id\", \"wm_yr_wk\"])\n        [[\"sell_price\"]]\n        .mean()\n        .rename(columns={\"sell_price\": \"av_item_state_sell_price\"})\n    )\n\n\ndef get_dept_state_level_sell_prices(sell_prices: pd.DataFrame) -> pd.DataFrame:\n    return (\n        sell_prices\n        .groupby([\"dept_id\", \"state_id\", \"wm_yr_wk\"])\n        [[\"sell_price\"]]\n        .mean()\n        .rename(columns={\"sell_price\": \"av_dept_state_sell_price\"})\n        .reset_index()\n    )\n\n\ndef add_average_item_dept_sell_prices(sell_prices: pd.DataFrame) -> pd.DataFrame:\n    item_state_prices = get_item_state_level_sell_prices(sell_prices)\n    dept_state_prices = get_dept_state_level_sell_prices(sell_prices)\n    sell_prices = (\n        sell_prices.merge(\n            right=item_state_prices,\n            on=[\"item_id\", \"state_id\", \"wm_yr_wk\"],\n            how=\"left\"\n        ).merge(\n            right=dept_state_prices,\n            on=[\"dept_id\", \"state_id\", \"wm_yr_wk\"],\n            how=\"left\"\n        )\n    )\n    return sell_prices\n",
             "metadata": {
+                "execution": {
+                    "iopub.status.busy": "2024-09-07T17:22:41.931829Z",
+                    "iopub.execute_input": "2024-09-07T17:22:41.933085Z",
+                    "iopub.status.idle": "2024-09-07T17:22:41.945623Z",
+                    "shell.execute_reply.started": "2024-09-07T17:22:41.933041Z",
+                    "shell.execute_reply": "2024-09-07T17:22:41.944193Z"
+                },
                 "trusted": true
             },
-            "execution_count": null,
+            "execution_count": 8,
             "outputs": []
         },
         {
             "cell_type": "code",
-            "source": "# Merge\ndef merge_sales_and_calendar_data(sales_df: pd.DataFrame, calendar_data: pd.DataFrame) -> pd.DataFrame:\n    return sales_df.merge(right=calendar_data, on=\"d\", how=\"left\")\n\n    \ndef merge_sales_and_price_data(sales_df: pd.DataFrame, sell_prices: pd.DataFrame) -> pd.DataFrame:\n    dedupe_item_state_prices = (\n        sell_prices[[\"item_id\", \"state_id\", \"wm_yr_wk\", \"av_item_state_sell_price\"]]\n        .drop_duplicates(subset=[\"item_id\", \"state_id\", \"wm_yr_wk\"])\n    )\n    dedupe_dept_state_prices = (\n        sell_prices[[\"dept_id\", \"state_id\", \"wm_yr_wk\", \"av_dept_state_sell_price\"]]\n        .drop_duplicates(subset=[\"dept_id\", \"state_id\", \"wm_yr_wk\"])\n    )\n    merged = sales_df.merge(\n        right=sell_prices[[\"item_id\", \"store_id\", \"wm_yr_wk\", \"sell_price\"]],\n        on=[\"item_id\", \"store_id\", \"wm_yr_wk\"],\n        how=\"left\"\n    ).merge(\n        right=dedupe_item_state_prices,\n        on=[\"item_id\", \"state_id\", \"wm_yr_wk\"],\n        how=\"left\",\n    ).merge(\n        right=dedupe_dept_state_prices,\n        on=[\"dept_id\", \"state_id\", \"wm_yr_wk\"],\n        how=\"left\",\n    )\n    return merged\n\ndef fill_missing_sell_prices(df: pd.DataFrame) -> pd.DataFrame:\n    df[\"sell_price\"] = (\n        df[\"sell_price\"]\n        .fillna(df[\"av_item_state_sell_price\"])\n        .fillna(df[\"av_dept_state_sell_price\"])\n    )\n    df[\"av_item_state_sell_price\"] = (\n        df[\"av_item_state_sell_price\"]\n        .fillna(df[\"av_dept_state_sell_price\"])\n    )\n    return df\n    \n    \ndef cast_types(df: pd.DataFrame) -> pd.DataFrame:\n    return df.astype(\n        {\n            \"item_id\": \"float\",\n            \"dept_id\": \"category\",\n            \"cat_id\": \"category\",\n            \"store_id\": \"category\",\n            \"state_id\": \"category\",\n            \"weekday\": \"category\",\n            \"month\": \"category\",\n            \"year\": \"category\",\n            \"event_name\": \"category\",\n            \"event_type\": \"category\",\n            \"sell_price\": \"float\",\n            \"av_item_state_sell_price\": \"float\",\n            \"av_dept_state_sell_price\": \"float\",\n        }\n    )\n    ",
+            "source": "# Merge\ndef merge_sales_and_calendar_data(sales_df: pd.DataFrame, calendar_data: pd.DataFrame) -> pd.DataFrame:\n    return sales_df.merge(right=calendar_data, on=\"d\", how=\"left\")\n\n    \ndef merge_sales_and_price_data(sales_df: pd.DataFrame, sell_prices: pd.DataFrame) -> pd.DataFrame:\n    dedupe_item_state_prices = (\n        sell_prices[[\"item_id\", \"state_id\", \"wm_yr_wk\", \"av_item_state_sell_price\"]]\n        .drop_duplicates(subset=[\"item_id\", \"state_id\", \"wm_yr_wk\"])\n    )\n    dedupe_dept_state_prices = (\n        sell_prices[[\"dept_id\", \"state_id\", \"wm_yr_wk\", \"av_dept_state_sell_price\"]]\n        .drop_duplicates(subset=[\"dept_id\", \"state_id\", \"wm_yr_wk\"])\n    )\n    merged = sales_df.merge(\n        right=sell_prices[[\"item_id\", \"store_id\", \"wm_yr_wk\", \"sell_price\"]],\n        on=[\"item_id\", \"store_id\", \"wm_yr_wk\"],\n        how=\"left\"\n    ).merge(\n        right=dedupe_item_state_prices,\n        on=[\"item_id\", \"state_id\", \"wm_yr_wk\"],\n        how=\"left\",\n    ).merge(\n        right=dedupe_dept_state_prices,\n        on=[\"dept_id\", \"state_id\", \"wm_yr_wk\"],\n        how=\"left\",\n    )\n    return merged\n\n\ndef fill_missing_sell_prices(df: pd.DataFrame) -> pd.DataFrame:\n    df[\"sell_price\"] = (\n        df[\"sell_price\"]\n        .fillna(df[\"av_item_state_sell_price\"])\n        .fillna(df[\"av_dept_state_sell_price\"])\n    )\n    df[\"av_item_state_sell_price\"] = (\n        df[\"av_item_state_sell_price\"]\n        .fillna(df[\"av_dept_state_sell_price\"])\n    )\n    return df\n    \n    \ndef cast_types(df: pd.DataFrame) -> pd.DataFrame:\n    return df.astype(\n        {\n            \"item_id\": \"float\",\n            \"dept_id\": \"category\",\n            \"cat_id\": \"category\",\n            \"store_id\": \"category\",\n            \"state_id\": \"category\",\n            \"weekday\": \"category\",\n            \"month\": \"category\",\n            \"year\": \"category\",\n            \"event_name\": \"category\",\n            \"event_type\": \"category\",\n            \"sell_price\": \"float\",\n            \"av_item_state_sell_price\": \"float\",\n            \"av_dept_state_sell_price\": \"float\",\n        }\n    )\n    ",
             "metadata": {
+                "execution": {
+                    "iopub.status.busy": "2024-09-07T17:22:41.947838Z",
+                    "iopub.execute_input": "2024-09-07T17:22:41.948268Z",
+                    "iopub.status.idle": "2024-09-07T17:22:41.964713Z",
+                    "shell.execute_reply.started": "2024-09-07T17:22:41.948230Z",
+                    "shell.execute_reply": "2024-09-07T17:22:41.963279Z"
+                },
                 "trusted": true
             },
-            "execution_count": null,
+            "execution_count": 9,
             "outputs": []
         },
         {
@@ -133,18 +196,32 @@
             "cell_type": "code",
             "source": "# Store category info for each item id\nitem_id_categories = SALES_TRAIN_EVALUATION[[\"id\", \"item_id\", \"dept_id\", \"cat_id\", \"store_id\", \"state_id\"]]",
             "metadata": {
+                "execution": {
+                    "iopub.status.busy": "2024-09-07T17:23:06.472009Z",
+                    "iopub.execute_input": "2024-09-07T17:23:06.472626Z",
+                    "iopub.status.idle": "2024-09-07T17:23:06.484912Z",
+                    "shell.execute_reply.started": "2024-09-07T17:23:06.472580Z",
+                    "shell.execute_reply": "2024-09-07T17:23:06.483820Z"
+                },
                 "trusted": true
             },
-            "execution_count": null,
+            "execution_count": 10,
             "outputs": []
         },
         {
             "cell_type": "code",
-            "source": "start_t = 600 if SUBMISSION_RUN else 1000\ntimestamp_cols = [f\"d_{i}\" for i in range(start_t, MAX_TIMESTAMP + 1)]\n\n# Process sales data\nsales_df = flatten_sales_df(SALES_TRAIN_EVALUATION, timestamp_cols)\n\n# Process calendar data\ncalendar_df = select_format_calendar_features(CALENDAR_DATA)\n\n# Process price data\nprice_df = extract_state_and_dept_id(SELL_PRICES)\nprice_df = add_average_item_dept_sell_prices(price_df)\n\n# Merge\ndata = merge_sales_and_calendar_data(sales_df, calendar_df)\ndata = merge_sales_and_price_data(data, price_df)\n\n# Fill missing price data\ndata = fill_missing_sell_prices(data)",
+            "source": "start_t = 500 if SUBMISSION_RUN else 1000\ntimestamp_cols = [f\"d_{i}\" for i in range(start_t, MAX_TIMESTAMP + 1)]\n\n# Process sales data\nsales_df = unpivot_sales_df(SALES_TRAIN_EVALUATION, timestamp_cols)\n\n# Process calendar data\ncalendar_df = select_format_calendar_features(CALENDAR_DATA)\n\n# Process price data\nprice_df = extract_state_and_dept_id(SELL_PRICES)\nprice_df = add_average_item_dept_sell_prices(price_df)\n\n# Merge\ndata = merge_sales_and_calendar_data(sales_df, calendar_df)\ndata = merge_sales_and_price_data(data, price_df)\n\n# Fill missing price data\ndata = fill_missing_sell_prices(data)",
             "metadata": {
+                "execution": {
+                    "iopub.status.busy": "2024-09-07T17:23:10.340629Z",
+                    "iopub.execute_input": "2024-09-07T17:23:10.341200Z",
+                    "iopub.status.idle": "2024-09-07T17:26:38.968575Z",
+                    "shell.execute_reply.started": "2024-09-07T17:23:10.341145Z",
+                    "shell.execute_reply": "2024-09-07T17:26:38.966875Z"
+                },
                 "trusted": true
             },
-            "execution_count": null,
+            "execution_count": 11,
             "outputs": []
         },
         {
