Add new eda plotting logic

--- a/m5/m5-acc-eda.ipynb
+++ b/m5/m5-acc-eda.ipynb
@@ -105,6 +105,15 @@
         },
         {
             "cell_type": "code",
+            "source": "n_samples = 500\nstore_ids = ['CA_1', 'CA_2', 'CA_3', 'CA_4', 'TX_1', 'TX_2', 'TX_3', 'WI_1', 'WI_2', 'WI_3']\nav_sales_by_store = data.groupby([\"store_id\", \"date\"])[[\"count\"]].mean()\n\nfig, ax = plt.subplots(len(store_ids), 1, sharex=True, sharey=True, figsize=(10, 15))\nax = ax.flatten()\nfor i, store_id in enumerate(store_ids):\n    store_df = data[data[\"store_id\"] == store_id]\n    for item_id, item_df in tqdm(store_df.groupby(\"item_id\")):\n        item_df = item_df.sort_values(by=\"d\")\n        item_df = item_df.iloc[-n_samples:]\n        ax[i].plot(\n            item_df[\"date\"].values,\n            item_df[\"count\"].values,\n            color=\"gray\",\n            lw=0.3,\n            alpha=0.25,\n        )\n    \n    mean_store_sales = av_sales_by_store.loc[store_id].reset_index()\n    mean_store_sales = mean_store_sales.sort_values(by=\"date\")\n    mean_store_sales = mean_store_sales.iloc[-n_samples:]\n    axi_2 = ax[i].twinx()\n    axi_2.plot(\n        mean_store_sales[\"date\"].values,\n        mean_store_sales[\"count\"].values,\n        color=\"blue\",\n        alpha=0.75,\n    )\n    axi_2.set(ylabel=\"mean sales\")\n    \n    date_labels = mean_store_sales[\"date\"].values[::100]\n    x_ticks = np.arange(0, n_samples, 100)\n    ax[i].set(xticks=x_ticks, xticklabels=date_labels)\n    ax[i].set(ylabel=\"count\", title=store_id)\n\nfig.tight_layout();\nplt.savefig(f\"{OUTPUT_BASE_BATH}/item_sales_by_store_timeseries.png\")",
+            "metadata": {
+                "trusted": true
+            },
+            "execution_count": null,
+            "outputs": []
+        },
+        {
+            "cell_type": "code",
             "source": "# Aggregate sales by store\nsales_by_store = data.groupby([\"store_id\", \"date\"])[[\"count\"]].sum()\nstore_ids = ['CA_1', 'CA_2', 'CA_3', 'CA_4', 'TX_1', 'TX_2', 'TX_3', 'WI_1', 'WI_2', 'WI_3']\nn_samples = 500\n\nfig, ax = plt.subplots(5, 2, sharex=True, sharey=True, figsize=(15, 10))\nax = ax.flatten()\nfor i, store_id in enumerate(store_ids):\n    store_df = sales_by_store.loc[(store_id, slice(None))].copy().reset_index()\n    store_df = store_df.iloc[-n_samples:]\n    ax[i].plot(np.arange(n_samples), store_df[\"count\"].values, label=store_id)\n    \n    date_labels = store_df[\"date\"].values[::100]\n    x_ticks = np.arange(0, n_samples, 100)\n    ax[i].set_xticks(x_ticks)\n    ax[i].set_xticklabels(date_labels)\n    if i % 2 == 0: ax[i].set_ylabel(\"count\")\n    ax[i].legend()\n\nfig.tight_layout();\nplt.savefig(f\"{OUTPUT_BASE_BATH}/total_sales_by_store_timeseries.png\")",
             "metadata": {
                 "trusted": true
@@ -161,6 +170,24 @@
             "cell_type": "markdown",
             "source": "# SALES BY STORE & DEPARTMENT",
             "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "source": "n_samples = 500\nstore_ids = ['CA_1', 'CA_2', 'CA_3', 'CA_4', 'TX_1', 'TX_2', 'TX_3', 'WI_1', 'WI_2', 'WI_3']\ndept_ids = ['HOBBIES_1', 'HOBBIES_2', 'HOUSEHOLD_1', 'HOUSEHOLD_2', 'FOODS_1', 'FOODS_2', 'FOODS_3']\nitem_ids_by_dept = {}\nfor dept_id in dept_ids:\n    item_ids = list(data[data[\"dept_id\"] == dept_id][\"item_id\"].unique())\n    item_ids_by_dept[dept_id] = item_ids\n\nav_store_dept_sales = data.groupby([\"store_id\", \"dept_id\", \"date\"])[[\"count\"]].mean()",
+            "metadata": {
+                "trusted": true
+            },
+            "execution_count": null,
+            "outputs": []
+        },
+        {
+            "cell_type": "code",
+            "source": "store_id = 'WI_3'\nstore_df = data[data[\"store_id\"] == store_id]\n\nfig, ax = plt.subplots(len(dept_ids), 1, figsize=(10, 12), sharex=True)\ncolors = cm.viridis(np.linspace(0, 1, len(dept_ids)))\n\nfor d, dept_id in enumerate(dept_ids):\n    dept_df = store_df[store_df[\"dept_id\"] == dept_id]\n    item_ids = item_ids_by_dept[dept_id]\n    for item_id in tqdm(item_ids):\n        item_df = dept_df[dept_df[\"item_id\"] == item_id]\n        item_df = item_df.sort_values(by=\"d\")\n        item_df = item_df.iloc[-n_samples:]\n        ax[d].plot(\n            item_df[\"date\"].values,\n            item_df[\"count\"].values,\n            color=colors[d],\n            lw=0.2,\n            alpha=0.25,\n        )\n\n    av_sales = av_store_dept_sales.loc[store_id, dept_id]\n    av_sales = av_sales.reset_index().sort_values(by=\"date\")\n    av_sales = av_sales.iloc[-n_samples:]\n    axd_2 = ax[d].twinx()\n    axd_2.plot(\n        av_sales[\"date\"].values,\n        av_sales[\"count\"].values,\n        color=colors[d],\n        lw=2\n    )\n    axd_2.set(ylabel=\"mean sales\")\n\n    date_labels = av_sales[\"date\"].values[::100]\n    x_ticks = np.arange(0, n_samples, 100)\n    ax[d].set(xticks=x_ticks, xticklabels=date_labels)\n    ax[d].set(ylabel=\"sales\", title=dept_id)\n\nfig.tight_layout();\nplt.savefig(f\"{OUTPUT_BASE_BATH}/item_sales_by_dept_store_{store_id}_timeseries.png\")",
+            "metadata": {
+                "trusted": true
+            },
+            "execution_count": null,
+            "outputs": []
         },
         {
             "cell_type": "code",
