--- a/m5/m5-acc-feature-engineering.ipynb
+++ b/m5/m5-acc-feature-engineering.ipynb
@@ -63,7 +63,7 @@
         },
         {
             "cell_type": "code",
-            "source": "# Constants\nMAX_TRAIN_TIMESTAMP = 1941\nSTART_TEST_TIMESTAMP = 1942\nSTART_TEST_WM_YR_WK = 11617\n\nSALES_LAG_PERIODS = [28, 29, 30, 31]\nPRICE_LAG_PERIODS = [1, 2, 3, 7]",
+            "source": "# Constants\nMAX_TRAIN_TIMESTAMP = 1941\nSTART_TEST_TIMESTAMP = 1942\nSTART_TEST_WM_YR_WK = 11617\n\nSALES_LAG_PERIODS = [28, 29, 30, 31]\nSALES_WINDOWS = [7, 14, 21, 28]\nPRICE_LAG_PERIODS = [1, 2, 3, 7]",
             "metadata": {
                 "trusted": true
             },
@@ -122,7 +122,7 @@
         },
         {
             "cell_type": "code",
-            "source": "# Feature engineering funcs\n\ndef fourier_features(data: pd.DataFrame) -> pd.DataFrame:\n    data[\"weekday_sin\"] = np.sin((2 * np.pi * data[\"weekday\"].astype(float)) / 7)\n    data[\"weekday_cos\"] = np.cos((2 * np.pi * data[\"weekday\"].astype(float)) / 7)\n    data[\"month_sin\"] = np.sin((2 * np.pi * data[\"month\"].astype(float)) / 12)\n    data[\"month_cos\"] = np.cos((2 * np.pi * data[\"month\"].astype(float)) / 12)\n    \n    for col in [\"weekday_sin\", \"weekday_cos\", \"month_sin\", \"month_cos\"]:\n        data[col] = data[col].astype(np.float16)\n    \n    return data\n\n\ndef av_store_dept_sales(sales_df: pd.DataFrame, chunk_size: int = 500_000) -> pd.DataFrame:\n    av_store_dept_sales = (\n        sales_df\n        .groupby([\"store_id\", \"dept_id\", \"d\"], observed=True)\n        [[\"count\"]]\n        .mean()\n        .rename(columns={\"count\": \"av_store_dept_sales\"})\n        .reset_index()\n    )\n    \n    # Merge in chunks then concatenate\n    store_dept_d_df = data[[\"store_id\", \"dept_id\", \"d\"]]\n    chunks = []\n    for chunk_start in tqdm(range(0, len(store_dept_d_df), chunk_size)):\n        store_dept_d_chunk = store_dept_d_df.iloc[chunk_start: chunk_start + chunk_size]\n        merged_chunk = store_dept_d_chunk.merge(\n            right=av_store_dept_sales,\n            on=[\"store_id\", \"dept_id\", \"d\"],\n            how=\"left\"\n        )\n        chunks.append(merged_chunk[\"av_store_dept_sales\"])\n    merged_av_sales = pd.concat(chunks, ignore_index=True)\n    data[\"av_store_dept_sales\"] = merged_av_sales.astype(np.float16)\n    return data\n\n\ndef item_on_sale_feature(data: pd.DataFrame) -> pd.DataFrame:\n    # When price is NaN sale count is 0\n    item_on_sale = data[\"sell_price\"].notnull()\n    data[\"item_on_sale\"] = item_on_sale.astype(int).astype(\"category\")\n    return data\n\n\ndef av_item_state_prices(\n    data: pd.DataFrame,\n    chunk_size: int = 500_000,\n) -> pd.DataFrame:\n    av_price = (\n        data\n        .groupby([\"item_id\", \"state_id\", \"d\"], observed=True)\n        [[\"sell_price\"]]\n        .mean()\n        .rename(columns={\"sell_price\": \"av_item_state_sell_price\"})\n        .reset_index()\n    )\n    \n    # Merge in chunks then concatenate\n    item_state_d_df = data[[\"item_id\", \"state_id\", \"d\"]]\n    chunks = []\n    for chunk_start in tqdm(range(0, len(item_state_d_df), chunk_size)):\n        item_state_d_chunk = item_state_d_df.iloc[chunk_start: chunk_start + chunk_size]\n        merged_chunk = item_state_d_chunk.merge(\n            right=av_price,\n            on=[\"item_id\", \"state_id\", \"d\"],\n            how=\"left\"\n        )\n        chunks.append(merged_chunk[\"av_item_state_sell_price\"])\n    merged_av_price = pd.concat(chunks, ignore_index=True)\n    data[\"av_item_state_sell_price\"] = merged_av_price.astype(np.float16)\n    return data\n\n\ndef av_dept_state_price(\n    data: pd.DataFrame,\n    chunk_size: int = 500_000\n) -> pd.DataFrame:\n    av_price = (\n        data\n        .groupby([\"dept_id\", \"state_id\", \"d\"], observed=True)\n        [[\"sell_price\"]]\n        .mean()\n        .rename(columns={\"sell_price\": \"av_dept_state_sell_price\"})\n        .reset_index()\n    )\n    \n    # Merge in chunks then concatenate\n    dept_state_d_df = data[[\"dept_id\", \"state_id\", \"d\"]]\n    chunks = []\n    for chunk_start in tqdm(range(0, len(dept_state_d_df), chunk_size)):\n        dept_state_d_chunk = dept_state_d_df.iloc[chunk_start: chunk_start + chunk_size]\n        merged_chunk = dept_state_d_chunk.merge(\n            right=av_price,\n            on=[\"dept_id\", \"state_id\", \"d\"],\n            how=\"left\"\n        )\n        chunks.append(merged_chunk[\"av_dept_state_sell_price\"])\n    merged_av_price = pd.concat(chunks, ignore_index=True)\n    data[\"av_dept_state_sell_price\"] = merged_av_price.astype(np.float16)\n    return data\n\n\ndef lagged_sales_features(sales_df: pd.DataFrame, periods: list[int]) -> pd.DataFrame:\n    # TODO: Consider applying the same merge + concat approach here\n    # rather than storing the whole df in lagged_dfs\n    lagged_dfs = []\n    for _, group_df in tqdm(sales_df.groupby([\"item_id\", \"store_id\"], observed=True)):\n        group_df = group_df.sort_values(\"d\")\n        for p in periods:\n            lag_series = group_df[\"count\"].shift(p)\n            group_df[f\"count_lag_{p}\"] = lag_series.astype(np.float16)\n        lagged_dfs.append(group_df)\n    return pd.concat(lagged_dfs, ignore_index=True)\n\n\ndef lagged_av_store_dept_sales_features(sales_df: pd.DataFrame, periods: list[int]) -> pd.DataFrame:\n    # TODO: Consider applying the same merge + concat approach here\n    # rather than storing the whole df in lagged_dfs\n    lagged_dfs = []\n    for _, group_df in tqdm(sales_df.groupby([\"item_id\", \"store_id\"], observed=True)):\n        group_df = group_df.sort_values(\"d\")\n        for p in periods:\n            lag_series = group_df[\"av_store_dept_sales\"].shift(p)\n            group_df[f\"av_store_dept_sales_lag_{p}\"] = lag_series.astype(np.float16)\n        lagged_dfs.append(group_df)\n    return pd.concat(lagged_dfs, ignore_index=True)\n\n\ndef lagged_sell_price_diff_features(\n    data: pd.DataFrame,\n    price_column: str,\n    periods: list[int],\n) -> pd.DataFrame:\n    # TODO: Consider applying the same merge + concat approach here\n    # rather than storing the whole df in lagged_dfs\n    lagged_dfs = []\n    for _, group_df in tqdm(data.groupby([\"item_id\", \"store_id\"], observed=True)):\n        group_df = group_df.sort_values(\"d\")\n        for p in periods:\n            lag_price_column = f\"{price_column}_diff_{p}\"\n            lag_series = group_df[price_column].diff(p)\n            group_df[lag_price_column] = lag_series.astype(np.float16)\n        lagged_dfs.append(group_df)\n    return pd.concat(lagged_dfs, ignore_index=True)\n",
+            "source": "# Feature engineering funcs\n\ndef fourier_features(data: pd.DataFrame) -> pd.DataFrame:\n    data[\"weekday_sin\"] = np.sin((2 * np.pi * data[\"weekday\"].astype(float)) / 7)\n    data[\"weekday_cos\"] = np.cos((2 * np.pi * data[\"weekday\"].astype(float)) / 7)\n    data[\"month_sin\"] = np.sin((2 * np.pi * data[\"month\"].astype(float)) / 12)\n    data[\"month_cos\"] = np.cos((2 * np.pi * data[\"month\"].astype(float)) / 12)\n    \n    for col in [\"weekday_sin\", \"weekday_cos\", \"month_sin\", \"month_cos\"]:\n        data[col] = data[col].astype(np.float16)\n    \n    return data\n\n\ndef av_store_dept_sales(sales_df: pd.DataFrame, chunk_size: int = 500_000) -> pd.DataFrame:\n    \"\"\"\n    Get the average number of sales of all products in a given department and store.\n    \n    :param sales_df: Sales data frame containing 'store_id', 'dept_id', 'd', and 'count' columns.\n    :param chunk_size: Dataframe chunk_size to use for merging. Defaults to 500_000\n    :return: Dataframe with 'av_store_dept_sales' column added.\n    \"\"\"\n    av_store_dept_sales = (\n        sales_df\n        .groupby([\"store_id\", \"dept_id\", \"d\"], observed=True)\n        [[\"count\"]]\n        .mean()\n        .rename(columns={\"count\": \"av_store_dept_sales\"})\n        .reset_index()\n    )\n    \n    # Merge in chunks then concatenate\n    store_dept_d_df = data[[\"store_id\", \"dept_id\", \"d\"]]\n    chunks = []\n    for chunk_start in tqdm(range(0, len(store_dept_d_df), chunk_size)):\n        store_dept_d_chunk = store_dept_d_df.iloc[chunk_start: chunk_start + chunk_size]\n        merged_chunk = store_dept_d_chunk.merge(\n            right=av_store_dept_sales,\n            on=[\"store_id\", \"dept_id\", \"d\"],\n            how=\"left\"\n        )\n        chunks.append(merged_chunk[\"av_store_dept_sales\"])\n    merged_av_sales = pd.concat(chunks, ignore_index=True)\n    data[\"av_store_dept_sales\"] = merged_av_sales.astype(np.float16)\n    return data\n\n\ndef item_on_sale_feature(data: pd.DataFrame) -> pd.DataFrame:\n    # When price is NaN sale count is 0\n    item_on_sale = data[\"sell_price\"].notnull()\n    data[\"item_on_sale\"] = item_on_sale.astype(int).astype(\"category\")\n    return data\n\n\ndef av_item_state_prices(data: pd.DataFrame, chunk_size: int = 500_000) -> pd.DataFrame:\n    \"\"\"\n    Get the average sell price for an item across the state.\n    \n    :param data: Dataframe with 'item_id', 'state_id', 'd', and 'sell_price' columns.\n    :param chunk_size: Dataframe chunk_size to use for merging. Defaults to 500_000\n    :return: Dataframe with 'av_item_state_sell_price' column added.\n    \"\"\"\n    av_price = (\n        data\n        .groupby([\"item_id\", \"state_id\", \"d\"], observed=True)\n        [[\"sell_price\"]]\n        .mean()\n        .rename(columns={\"sell_price\": \"av_item_state_sell_price\"})\n        .reset_index()\n    )\n    \n    # Merge in chunks then concatenate\n    item_state_d_df = data[[\"item_id\", \"state_id\", \"d\"]]\n    chunks = []\n    for chunk_start in tqdm(range(0, len(item_state_d_df), chunk_size)):\n        item_state_d_chunk = item_state_d_df.iloc[chunk_start: chunk_start + chunk_size]\n        merged_chunk = item_state_d_chunk.merge(\n            right=av_price,\n            on=[\"item_id\", \"state_id\", \"d\"],\n            how=\"left\"\n        )\n        chunks.append(merged_chunk[\"av_item_state_sell_price\"])\n    merged_av_price = pd.concat(chunks, ignore_index=True)\n    data[\"av_item_state_sell_price\"] = merged_av_price.astype(np.float16)\n    return data\n\n\ndef av_dept_state_price(data: pd.DataFrame, chunk_size: int = 500_000) -> pd.DataFrame:\n    av_price = (\n        data\n        .groupby([\"dept_id\", \"state_id\", \"d\"], observed=True)\n        [[\"sell_price\"]]\n        .mean()\n        .rename(columns={\"sell_price\": \"av_dept_state_sell_price\"})\n        .reset_index()\n    )\n    \n    # Merge in chunks then concatenate\n    dept_state_d_df = data[[\"dept_id\", \"state_id\", \"d\"]]\n    chunks = []\n    for chunk_start in tqdm(range(0, len(dept_state_d_df), chunk_size)):\n        dept_state_d_chunk = dept_state_d_df.iloc[chunk_start: chunk_start + chunk_size]\n        merged_chunk = dept_state_d_chunk.merge(\n            right=av_price,\n            on=[\"dept_id\", \"state_id\", \"d\"],\n            how=\"left\"\n        )\n        chunks.append(merged_chunk[\"av_dept_state_sell_price\"])\n    merged_av_price = pd.concat(chunks, ignore_index=True)\n    data[\"av_dept_state_sell_price\"] = merged_av_price.astype(np.float16)\n    return data\n\n\ndef lagged_sales_features(sales_df: pd.DataFrame, periods: list[int]) -> pd.DataFrame:\n    # TODO: Consider applying the same merge + concat approach here\n    # rather than storing the whole df in lagged_dfs\n    lagged_dfs = []\n    for _, group_df in tqdm(sales_df.groupby([\"item_id\", \"store_id\"], observed=True)):\n        group_df = group_df.sort_values(\"d\")\n        for p in periods:\n            lag_series = group_df[\"count\"].shift(p)\n            group_df[f\"count_lag_{p}\"] = lag_series.astype(np.float16)\n        lagged_dfs.append(group_df)\n    return pd.concat(lagged_dfs, ignore_index=True)\n\n\ndef lagged_rolling_sales_features(\n    sales_df: pd.DataFrame,\n    windows: list[int],\n    lag: int = 28,\n    agg_funcs: list[str] | None = None,\n) -> pd.DataFrame:\n    # TODO: Consider applying the same merge + concat approach here\n    # rather than storing the whole df in lagged_dfs\n    agg_funcs = agg_funcs or [\"mean\", \"std\", \"kurt\"]\n    group_dfs = []\n    for _, group_df in tqdm(sales_df.groupby([\"item_id\", \"store_id\"], observed=True)):\n        group_df = group_df.sort_values(\"d\")\n        \n        window_dfs = []\n        for w in windows:\n            window_df = group_df[f\"count_lag_{lag}\"].rolling(w).aggregate(agg_funcs).astype(np.float16)\n            col_names = [f\"rolling_{f}_lag_{lag}_window_{w}\" for f in agg_funcs]\n            window_df.columns = col_names\n            window_dfs.append(window_df)\n        \n        all_windows_df = pd.concat(window_dfs, axis=1)\n        group_dfs.append(pd.concat([group_df, all_windows_df], axis=1))\n        \n    return pd.concat(group_dfs, axis=0, ignore_index=True)\n            \n\n\ndef lagged_av_store_dept_sales_features(sales_df: pd.DataFrame, periods: list[int]) -> pd.DataFrame:\n    # TODO: Consider applying the same merge + concat approach here\n    # rather than storing the whole df in lagged_dfs\n    lagged_dfs = []\n    for _, group_df in tqdm(sales_df.groupby([\"item_id\", \"store_id\"], observed=True)):\n        group_df = group_df.sort_values(\"d\")\n        for p in periods:\n            lag_series = group_df[\"av_store_dept_sales\"].shift(p)\n            group_df[f\"av_store_dept_sales_lag_{p}\"] = lag_series.astype(np.float16)\n        lagged_dfs.append(group_df)\n    return pd.concat(lagged_dfs, ignore_index=True)\n\n\ndef lagged_sell_price_diff_features(\n    data: pd.DataFrame,\n    price_column: str,\n    periods: list[int],\n) -> pd.DataFrame:\n    # TODO: Consider applying the same merge + concat approach here\n    # rather than storing the whole df in lagged_dfs\n    lagged_dfs = []\n    for _, group_df in tqdm(data.groupby([\"item_id\", \"store_id\"], observed=True)):\n        group_df = group_df.sort_values(\"d\")\n        for p in periods:\n            lag_price_column = f\"{price_column}_diff_{p}\"\n            lag_series = group_df[price_column].diff(p)\n            group_df[lag_price_column] = lag_series.astype(np.float16)\n        lagged_dfs.append(group_df)\n    return pd.concat(lagged_dfs, ignore_index=True)\n",
             "metadata": {
                 "trusted": true
             },
@@ -192,7 +192,70 @@
         },
         {
             "cell_type": "code",
-            "source": "# Feature engineering\n\n# Aggregate sales and price features\ndata = av_item_state_prices(data)\ndata = av_dept_state_price(data)\ndata = av_store_dept_sales(data)\n\n# Price features\ndata = item_on_sale_feature(data)\ndata = lagged_sell_price_diff_features(data, price_column=\"sell_price\", periods=PRICE_LAG_PERIODS)\n\n# Add lagged sales data\ndata = lagged_sales_features(data, periods=SALES_LAG_PERIODS)\ndata = lagged_av_store_dept_sales_features(data, periods=SALES_LAG_PERIODS)\n\n# Fourier features\ndata = fourier_features(data)",
+            "source": "data.to_parquet(f\"{OUTPUT_BASE_BATH}/m5-acc-train-intermediate.parquet\")",
+            "metadata": {
+                "trusted": true
+            },
+            "execution_count": null,
+            "outputs": []
+        },
+        {
+            "cell_type": "code",
+            "source": "# Feature engineering\n\n# Aggregate sales and price features\ndata = av_item_state_prices(data)\ndata = av_dept_state_price(data)\ndata = av_store_dept_sales(data)",
+            "metadata": {
+                "trusted": true
+            },
+            "execution_count": null,
+            "outputs": []
+        },
+        {
+            "cell_type": "code",
+            "source": "data.to_parquet(f\"{OUTPUT_BASE_BATH}/m5-acc-train-intermediate-2.parquet\")",
+            "metadata": {
+                "trusted": true
+            },
+            "execution_count": null,
+            "outputs": []
+        },
+        {
+            "cell_type": "code",
+            "source": "# Price features\ndata = item_on_sale_feature(data)\ndata = lagged_sell_price_diff_features(data, price_column=\"sell_price\", periods=PRICE_LAG_PERIODS)",
+            "metadata": {
+                "trusted": true
+            },
+            "execution_count": null,
+            "outputs": []
+        },
+        {
+            "cell_type": "code",
+            "source": "data.to_parquet(f\"{OUTPUT_BASE_BATH}/m5-acc-train-intermediate-3.parquet\")",
+            "metadata": {
+                "trusted": true
+            },
+            "execution_count": null,
+            "outputs": []
+        },
+        {
+            "cell_type": "code",
+            "source": "# Add lagged and rolloing sales features\ndata = lagged_sales_features(data, periods=SALES_LAG_PERIODS)\ndata = lagged_av_store_dept_sales_features(data, periods=SALES_LAG_PERIODS)",
+            "metadata": {
+                "trusted": true
+            },
+            "execution_count": null,
+            "outputs": []
+        },
+        {
+            "cell_type": "code",
+            "source": "data = lagged_rolling_sales_features(data, windows=SALES_WINDOWS, lag=28)",
+            "metadata": {
+                "trusted": true
+            },
+            "execution_count": null,
+            "outputs": []
+        },
+        {
+            "cell_type": "code",
+            "source": "# Fourier features\ndata = fourier_features(data)",
             "metadata": {
                 "trusted": true
             },
