Complete next round of feature engineering, remove intermediate notebook outputs

--- a/m5/m5-acc-feature-engineering.ipynb
+++ b/m5/m5-acc-feature-engineering.ipynb
@@ -42,6 +42,13 @@
             "metadata": {
                 "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
                 "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
+                "execution": {
+                    "iopub.status.busy": "2024-10-11T05:59:19.100533Z",
+                    "iopub.execute_input": "2024-10-11T05:59:19.100923Z",
+                    "iopub.status.idle": "2024-10-11T05:59:19.821335Z",
+                    "shell.execute_reply.started": "2024-10-11T05:59:19.100885Z",
+                    "shell.execute_reply": "2024-10-11T05:59:19.820333Z"
+                },
                 "trusted": true
             },
             "execution_count": null,
@@ -228,7 +235,7 @@
         },
         {
             "cell_type": "code",
-            "source": "data.to_parquet(f\"{OUTPUT_BASE_BATH}/m5-acc-train-intermediate.parquet\")\n\n# data = pd.read_parquet(f\"{OUTPUT_BASE_BATH}/m5-acc-train-intermediate.parquet\")\n# data = cast_calendar_data_types(data)\n# data = cast_sales_data_types(data)",
+            "source": "# Feature engineering\n\n# Aggregate sales and price features\n# data = av_item_state_prices(data)\n# data = av_dept_state_price(data)\n# data = av_store_dept_sales(data)\n# _ = gc.collect()",
             "metadata": {
                 "trusted": true
             },
@@ -237,70 +244,7 @@
         },
         {
             "cell_type": "code",
-            "source": "# Feature engineering\n\n# Aggregate sales and price features\n# data = av_item_state_prices(data)\n# data = av_dept_state_price(data)\n# data = av_store_dept_sales(data)\n\n_ = gc.collect()",
-            "metadata": {
-                "trusted": true
-            },
-            "execution_count": null,
-            "outputs": []
-        },
-        {
-            "cell_type": "code",
-            "source": "# Add lagged event features\n\ndata = lagged_event_features(\n    data=data,\n    periods=EVENT_LAG_PERIODS,\n    no_event_name_category=event_name_map[np.nan],\n    no_event_type_category=event_type_map[np.nan],\n)\n\n_ = gc.collect()",
-            "metadata": {
-                "trusted": true
-            },
-            "execution_count": null,
-            "outputs": []
-        },
-        {
-            "cell_type": "code",
-            "source": "data.to_parquet(f\"{OUTPUT_BASE_BATH}/m5-acc-train-intermediate-2.parquet\")\n\n# data = pd.read_parquet(f\"{OUTPUT_BASE_BATH}/m5-acc-train-intermediate-2.parquet\")\n# data = cast_calendar_data_types(data)\n# data = cast_sales_data_types(data)",
-            "metadata": {
-                "trusted": true
-            },
-            "execution_count": null,
-            "outputs": []
-        },
-        {
-            "cell_type": "code",
-            "source": "# Add price diff and rolling price features\ndata = price_diff_features(data, price_column=\"sell_price\", periods=PRICE_LAG_PERIODS)\ndata = rolling_price_features(data, windows=PRICE_ROLLING_WINDOWS, agg_funcs=PRICE_ROLLING_AGG_FUNCS)\n\n_ = gc.collect()",
-            "metadata": {
-                "trusted": true
-            },
-            "execution_count": null,
-            "outputs": []
-        },
-        {
-            "cell_type": "code",
-            "source": "data.to_parquet(f\"{OUTPUT_BASE_BATH}/m5-acc-train-intermediate-3.parquet\")\n\n# data = pd.read_parquet(f\"{OUTPUT_BASE_BATH}/m5-acc-train-intermediate-3.parquet\")\n# data = cast_calendar_data_types(data)\n# data = cast_sales_data_types(data)\n# data[\"item_on_sale\"] = data[\"item_on_sale\"].astype('category')",
-            "metadata": {
-                "trusted": true
-            },
-            "execution_count": null,
-            "outputs": []
-        },
-        {
-            "cell_type": "code",
-            "source": "# Add lagged and rolling sales features\ndata = lagged_sales_features(data, feature_column=\"count\", periods=SALES_LAG_PERIODS)\n# data = lagged_av_store_dept_sales_features(data, feature_column=\"av_store_dept_sales\", periods=SALES_LAG_PERIODS)\ndata = lagged_rolling_sales_features(data, windows=SALES_ROLLING_WINDOWS, agg_funcs=SALES_ROLLING_AGG_FUNCS)",
-            "metadata": {
-                "trusted": true
-            },
-            "execution_count": null,
-            "outputs": []
-        },
-        {
-            "cell_type": "code",
-            "source": "data.to_parquet(f\"{OUTPUT_BASE_BATH}/m5-acc-train-intermediate-4.parquet\")\n\n# data = pd.read_parquet(f\"{OUTPUT_BASE_BATH}/m5-acc-train-intermediate-4.parquet\")\n# data = cast_calendar_data_types(data)\n# data = cast_sales_data_types(data)",
-            "metadata": {
-                "trusted": true
-            },
-            "execution_count": null,
-            "outputs": []
-        },
-        {
-            "cell_type": "code",
-            "source": "# Item in stock feature\ndata = item_on_sale_feature(data)\n\n# Datetime features\ndata = datetime_features(data)\ndata = fourier_features(data)",
+            "source": "# Add lagged event features\ndata = lagged_event_features(\n    data=data,\n    periods=EVENT_LAG_PERIODS,\n    no_event_name_category=event_name_map[np.nan],\n    no_event_type_category=event_type_map[np.nan],\n)\n\n_ = gc.collect()\n\n# Lagged and rolling price features\ndata = price_diff_features(data, price_column=\"sell_price\", periods=PRICE_LAG_PERIODS)\ndata = rolling_price_features(data, windows=PRICE_ROLLING_WINDOWS, agg_funcs=PRICE_ROLLING_AGG_FUNCS)\n\n_ = gc.collect()\n\n# Lagged and rolling sales features\ndata = lagged_sales_features(data, feature_column=\"count\", periods=SALES_LAG_PERIODS)\n# data = lagged_av_store_dept_sales_features(data, feature_column=\"av_store_dept_sales\", periods=SALES_LAG_PERIODS)\ndata = lagged_rolling_sales_features(data, windows=SALES_ROLLING_WINDOWS, agg_funcs=SALES_ROLLING_AGG_FUNCS)\n\n_ = gc.collect()\n\n# Item in stock feature\ndata = item_on_sale_feature(data)\n\n# Datetime features\ndata = datetime_features(data)\ndata = fourier_features(data)\n\n_ = gc.collect()",
             "metadata": {
                 "trusted": true
             },
